:wrench: Se cambia la estructura del sitio y la navegabilidad hacia el sitio del repositorio.

--- a/content/module_01/class_01/index.html
+++ b/content/module_01/class_01/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clase 01</title>
 </head>
 <body>
-    
+    <a href="https://christiangrimberg.github.io/coderhouse-desarrollo-web/">coderhouse-desarrollo-web</a>
 </body>
 </html>
